All translation keys are now lowercase
(cherry picked from commit e702deb)

--- a/src/main/resources/assets/vampirism/lang/en_us.lang
+++ b/src/main/resources/assets/vampirism/lang/en_us.lang
@@ -5,7 +5,7 @@ text.vampirism.skill.resetall=Reset skills
 text.vampirism.skill.unlocked=Unlocked
 text.vampirism.skill.unlocks_action=Unlocks action
 text.vampirism.skill.unlock_parent_first=Unlock parent first
-text.vampirism.skill.skillsReset=Your skills have been reset
+text.vampirism.skill.skills_reset=Your skills have been reset
 
 #VAMPIRE SKILLS
 text.vampirism.skill.root_vampire=Becoming a vampire
@@ -75,7 +75,7 @@ text.vampirism.skill.tech_weapons=Technology
 text.vampirism.skill.tech_weapons.desc=Learn how to build some advanced weapons
 text.vampirism.skill.enhanced_armor=Enhanced armor
 text.vampirism.skill.enhanced_weapons=Enhanced weapons
-text.vampirism.skill.disguiseHunter.desc=Allows you to hide from mobs and become far less visible to other players
+text.vampirism.skill.disguise_hunter.desc=Allows you to hide from mobs and become far less visible to other players
 text.vampirism.skill.basic_alchemy=Basic Alchemy
 text.vampirism.skill.basic_alchemy.desc=Learn how to use the Alchemical Cauldron to craft awesome things.
 text.vampirism.skill.garlic_beacon=Vampire repelling
@@ -105,19 +105,19 @@ entity.vampirism.hunter_trainer.name=Vampire Hunter Trainer
 entity.vampirism.advanced_vampire.name=Advanced Vampire
 entity.vampirism.advanced_hunter.name=Advanced Hunter
 entity.vampirism.hunter_villager.name=Angry Villager
-entity.vampirism.vampireHunter.name=Vampire Hunter
+entity.vampirism.vampire_hunter.name=Vampire Hunter
 entity.vampirism.vampire.name=Vampire
 entity.vampirism.ghost.name=Ghost
-entity.vampirism.vampireBaron.name=Vampire Baron
-entity.vampirism.vampireMinionR.name=Vampire Minion
-entity.vampirism.vampireMinionS.name=Vampire Minion
+entity.vampirism.vampire_baron.name=Vampire Baron
+entity.vampirism.vampire_minion_r.name=Vampire Minion
+entity.vampirism.vampire_minion_s.name=Vampire Minion
 entity.vampirism.blinding_bat.name=Bat
 entity.vampirism.dracula.name=Dracula
 entity.vampirism.dead_mob.name=Dead mob
 entity.vampirism.portal_guard.name=Portal Guard
 entity.vampirism.converted.villager.name=Vampire Villager
 text.vampirism.entity_level=Level
-entity.Villager.vampire_hunter=Alchemic Priest
+entity._villager.vampire_hunter=Alchemic Priest
 
 #RITUALS
 text.vampirism.ritual_missing_items=Missing %s of "%s" for this ritual
@@ -125,107 +125,107 @@ text.vampirism.ritual_night_only=You can only perform this ritual at night
 text.vampirism.trainer_level_wrong=This trainer cannot train you at your level
 
 #BLOCKS
-tile.vampirism.hunterTable.name=Hunter Research Table
-tile.vampirism.castleBlock.name=Castle Block
-tile.vampirism.cursedEarth.name=Cursed Earth
-tile.vampirism.altarInfusion.name=Altar of Infusion
-tile.vampirism.altarPillar.name=Altar Pillar
-tile.vampirism.altarTip.name=Altar Tip
-tile.vampirism.altarInspiration.name=Altar of Inspiration
+tile.vampirism.hunter_table.name=Hunter Research Table
+tile.vampirism.castle_block.name=Castle Block
+tile.vampirism.cursed_earth.name=Cursed Earth
+tile.vampirism.altar_infusion.name=Altar of Infusion
+tile.vampirism.altar_pillar.name=Altar Pillar
+tile.vampirism.altar_tip.name=Altar Tip
+tile.vampirism.altar_inspiration.name=Altar of Inspiration
 tile.vampirism.tent.name=Tent
-tile.vampirism.churchAltar.name=Altar of Cleansing
-tile.vampirism.bloodContainer.name=Blood Container
-tile.vampirism.medChair.name=Injection Chair
+tile.vampirism.church_altar.name=Altar of Cleansing
+tile.vampirism.blood_container.name=Blood Container
+tile.vampirism.med_chair.name=Injection Chair
 tile.vampirism.vampire_orchid.name=Vampire Orchid
-tile.vampirism.firePlace.name=Fire Place
-tile.vampirism.weaponTable.name=Hunter Weapon Table
-tile.vampirism.weaponTable.cannot_use=You have not learned how to use this
-tile.vampirism.bloodPotionTable.name=Blood Potion Table
-tile.vampirism.bloodPotionTable.cannot_use=You have not learned how to use this
-tile.vampirism.sunscreenBeacon.name=Sunscreen Beacon
-tile.vampirism.alchemicalFire.name=Alchemical Fire
-tile.vampirism.alchemicalCauldron.other=This cauldron belongs to %s. You should not use it.
-tile.vampirism.alchemicalCauldron.name=Alchemical Cauldron
-tile.vampirism.alchemicalCauldron.display=%s's %s
-tile.vampirism.alchemicalCauldron.cannot_use=You have not learned how to use this
-tile.vampirism.garlicBeacon.name=Garlic Diffusor
-tile.vampirism.garlicBeacon.improved=Improved
-tile.vampirism.garlicBeacon.weak=Weak
-tile.vampirism.garlicBeacon.already_fueled=Already fueled
-tile.vampirism.garlicBeacon.successfully_fueled=Successfully fueled
+tile.vampirism.fire_place.name=Fire Place
+tile.vampirism.weapon_table.name=Hunter Weapon Table
+tile.vampirism.weapon_table.cannot_use=You have not learned how to use this
+tile.vampirism.blood_potion_table.name=Blood Potion Table
+tile.vampirism.blood_potion_table.cannot_use=You have not learned how to use this
+tile.vampirism.sunscreen_beacon.name=Sunscreen Beacon
+tile.vampirism.alchemical_fire.name=Alchemical Fire
+tile.vampirism.alchemical_cauldron.other=This cauldron belongs to %s. You should not use it.
+tile.vampirism.alchemical_cauldron.name=Alchemical Cauldron
+tile.vampirism.alchemical_cauldron.display=%s's %s
+tile.vampirism.alchemical_cauldron.cannot_use=You have not learned how to use this
+tile.vampirism.garlic_beacon.name=Garlic Diffusor
+tile.vampirism.garlic_beacon.improved=Improved
+tile.vampirism.garlic_beacon.weak=Weak
+tile.vampirism.garlic_beacon.already_fueled=Already fueled
+tile.vampirism.garlic_beacon.successfully_fueled=Successfully fueled
 
 #ITEMS
-item.vampirism.hunterIntel.name=Hunter Intel
+item.vampirism.hunter_intel.name=Hunter Intel
 text.vampirism.for_level=for Level
 item.vampirism.injection.name=Syringe
 item.vampirism.injection.garlic.name=Garlic Injection
 item.vampirism.injection.sanguinare.name=Sanguinare Injection
-item.vampirism.itemTent.name=Tent
-item.vampirism.itemCoffin.name=Coffin
-item.vampirism.itemGarlic.name=Garlic
-item.vampirism.itemMedChair.name=Injection Chair
-item.vampirism.battleAxe.name=Battle Axe
-item.vampirism.crossbowArrow.name=Crossbow Arrow
-item.vampirism.crossbowArrow.vampireKiller.tooltip=Instantly kills low level vampire NPCs.
-item.vampirism.crossbowArrow.vampireKiller.name=Vampire Killer Arrow
-item.vampirism.crossbowArrow.spitfire.name=Spitfire
-item.vampirism.crossbowArrow.spitfire.tooltip=Creates a alchemical fire on impact
-item.vampirism.basicCrossbow.name=Crossbow
-item.vampirism.enhancedCrossbow.name=Enhanced Crossbow
-item.vampirism.basicDoubleCrossbow.name=Double Crossbow
-item.vampirism.enhancedDoubleCrossbow.name=Enhanced Double Crossbow
-item.vampirism.stake.name=Stake
-item.vampirism.vampireBloodBottle.name=Vampire Blood
-item.vampirism.bloodPotion.name=Blood Potion
-item.vampirism.basicTechCrossbow.name=Semi-Auto Crossbow
-item.vampirism.enhancedTechCrossbow.name=Enhanced Semi-Auto Crossbow
-item.vampirism.techCrossbowAmmoPackage.name=Arrow clip
-item.vampirism.techCrossbowAmmoPackage.tooltip=Can be used to fill a %s
-item.vampirism.vampiresFear.name=Vampire's fear
-item.vampirism.bloodBottle.name=Blood Bottle
-item.vampirism.vampireFang.name=Vampire Fang
-item.vampirism.pitchfork.name=Pitchfork
-item.vampirism.humanHeart.name=Human Heart
-item.vampirism.torch.name=Torch
-item.vampirism.pureBlood.name=Pure Blood
-item.vampirism.sunscreen.name=Sunscreen
-item.vampirism.leechSword.name=Leech
-item.vampirism.coffin.name=Coffin
-item.vampirism.vampireArmor_helmet.name=Vampire's helmet
-item.vampirism.vampireArmor_leggings.name=Vampire's leggings
-item.vampirism.vampireArmor_boots.name=Vampire's boots
-item.vampirism.vampireArmor_chestplate.name=Vampire's chestplate
-item.vampirism.minionNameTag.name=Minion name tag
-item.vampirism.gemOfBinding.name=Gem of Binding
-item.vampirism.bloodEye.name=Blood Eye
-item.vampirism.weakVampireFang.name=Weak Vampire Fang
-item.vampirism.weakHumanHeart.name=Weak Human Heart
 item.vampirism.item_tent.name=Tent
-item.vampirism.concentratedGarlic.name=Concentrated Garlic
+item.vampirism.item_coffin.name=Coffin
+item.vampirism.item_garlic.name=Garlic
+item.vampirism.item_med_chair.name=Injection Chair
+item.vampirism.battle_axe.name=Battle Axe
+item.vampirism.crossbow_arrow.name=Crossbow Arrow
+item.vampirism.crossbow_arrow.vampire_killer.tooltip=Instantly kills low level vampire NPCs.
+item.vampirism.crossbow_arrow.vampire_killer.name=Vampire Killer Arrow
+item.vampirism.crossbow_arrow.spitfire.name=Spitfire
+item.vampirism.crossbow_arrow.spitfire.tooltip=Creates a alchemical fire on impact
+item.vampirism.basic_crossbow.name=Crossbow
+item.vampirism.enhanced_crossbow.name=Enhanced Crossbow
+item.vampirism.basic_double_crossbow.name=Double Crossbow
+item.vampirism.enhanced_double_crossbow.name=Enhanced Double Crossbow
+item.vampirism.stake.name=Stake
+item.vampirism.vampire_blood_bottle.name=Vampire Blood
+item.vampirism.blood_potion.name=Blood Potion
+item.vampirism.basic_tech_crossbow.name=Semi-Auto Crossbow
+item.vampirism.enhanced_tech_crossbow.name=Enhanced Semi-Auto Crossbow
+item.vampirism.tech_crossbow_ammo_package.name=Arrow clip
+item.vampirism.tech_crossbow_ammo_package.tooltip=Can be used to fill a %s
+item.vampirism.vampires_fear.name=Vampire's fear
+item.vampirism.blood_bottle.name=Blood Bottle
+item.vampirism.vampire_fang.name=Vampire Fang
+item.vampirism.pitchfork.name=Pitchfork
+item.vampirism.human_heart.name=Human Heart
+item.vampirism.torch.name=Torch
+item.vampirism.pure_blood.name=Pure Blood
+item.vampirism.sunscreen.name=Sunscreen
+item.vampirism.leech_sword.name=Leech
+item.vampirism.coffin.name=Coffin
+item.vampirism.vampire_armor_helmet.name=Vampire's helmet
+item.vampirism.vampire_armor_leggings.name=Vampire's leggings
+item.vampirism.vampire_armor_boots.name=Vampire's boots
+item.vampirism.vampire_armor_chestplate.name=Vampire's chestplate
+item.vampirism.minion_name_tag.name=Minion name tag
+item.vampirism.gem_of_binding.name=Gem of Binding
+item.vampirism.blood_eye.name=Blood Eye
+item.vampirism.weak_vampire_fang.name=Weak Vampire Fang
+item.vampirism.weak_human_heart.name=Weak Human Heart
+item.vampirism.item_tent.name=Tent
+item.vampirism.concentrated_garlic.name=Concentrated Garlic
 item.vampirism.garlic_bomb.name=Garlic Bomb
-item.vampirism.vampireBook.name=Vampire Book
-item.vampirism.armorOfSwiftness.head.name=Helmet of Swiftness
-item.vampirism.armorOfSwiftness.chest.name=Chestplate of Swiftness
-item.vampirism.armorOfSwiftness.legs.name=Leggings of Swiftness
-item.vampirism.armorOfSwiftness.feet.name=Boots of Swiftness
-item.vampirism.hunterHat0.head.name=Hunter Hat
-item.vampirism.hunterHat1.head.name=Hunter Hat
-item.vampirism.hunterAxe.name=Hunter Axe
-item.vampirism.hunterCoat.head.name=Hunter Coat Helmet
-item.vampirism.hunterCoat.chest.name=Hunter Coat
-item.vampirism.hunterCoat.legs.name=Hunter Coat Leggings
-item.vampirism.hunterCoat.feet.name=Hunter Coat Boots
-item.vampirism.obsidianArmor.head.name=Obsidian Helmet of Hell
-item.vampirism.obsidianArmor.chest.name=Obsidian Chestplate of Hell
-item.vampirism.obsidianArmor.legs.name=Obsidian Leggings of Hell
-item.vampirism.obsidianArmor.feet.name=Obsidian Boots of Hell
+item.vampirism.vampire_book.name=Vampire Book
+item.vampirism.armor_of_swiftness.head.name=Helmet of Swiftness
+item.vampirism.armor_of_swiftness.chest.name=Chestplate of Swiftness
+item.vampirism.armor_of_swiftness.legs.name=Leggings of Swiftness
+item.vampirism.armor_of_swiftness.feet.name=Boots of Swiftness
+item.vampirism.hunter_hat0.head.name=Hunter Hat
+item.vampirism.hunter_hat1.head.name=Hunter Hat
+item.vampirism.hunter_axe.name=Hunter Axe
+item.vampirism.hunter_coat.head.name=Hunter Coat Helmet
+item.vampirism.hunter_coat.chest.name=Hunter Coat
+item.vampirism.hunter_coat.legs.name=Hunter Coat Leggings
+item.vampirism.hunter_coat.feet.name=Hunter Coat Boots
+item.vampirism.obsidian_armor.head.name=Obsidian Helmet of Hell
+item.vampirism.obsidian_armor.chest.name=Obsidian Chestplate of Hell
+item.vampirism.obsidian_armor.legs.name=Obsidian Leggings of Hell
+item.vampirism.obsidian_armor.feet.name=Obsidian Boots of Hell
 item.vampirism.holy_water_bottle.name=Holy Water
 item.vampirism.holy_water_bottle.splash.name=Splash Bottle of Holy Water
 item.vampirism.holy_salt.name=Blessed Salt
 item.vampirism.holy_salt_water.name=Blessed Salt Water
-item.vampirism.itemAlchemicalFire.name=Alchemical Fire
-item.vampirism.itemAlchemicalFire.desc1=Does not spread
-item.vampirism.itemAlchemicalFire.desc2=Burns indefinitely
+item.vampirism.item_alchemical_fire.name=Alchemical Fire
+item.vampirism.item_alchemical_fire.desc1=Does not spread
+item.vampirism.item_alchemical_fire.desc2=Burns indefinitely
 item.vampirism.purified_garlic.name=Purified Garlic
 item.vampirism.garlic_beacon_core.name=Garlic Diffusor Core
 item.vampirism.garlic_beacon_core_improved.name=Improved Garlic Diffusor Core
@@ -272,9 +272,9 @@ gui.vampirism.hunter_weapon_table.skill=Required Skill: %s
 gui.vampirism.blood_potion_table.create=Start Crafting
 gui.vampirism.revertback.head=Revert back to normal human
 gui.vampirism.revertback.desc=You will loose all your levels and die
-gui.vampirism.resetSkills.title=Reset skills
-gui.vampirism.resetSkills.desc=If you reset your skills you will loose one level. Do you want to reset your skills?
-gui.vampirism.resetSkills.descTest=Do you want to reset your skills? (You do not loose a level, because you are using an alpha version of Vampirism)
+gui.vampirism.reset_skills.title=Reset skills
+gui.vampirism.reset_skills.desc=If you reset your skills you will loose one level. Do you want to reset your skills?
+gui.vampirism.reset_skills.desc_test=Do you want to reset your skills? (You do not loose a level, because you are using an alpha version of Vampirism)
 gui.vampirism.alchemical_cauldron.level=Required Hunter Level: %s
 gui.vampirism.alchemical_cauldron.skill=Required Skill: %s
 
@@ -283,8 +283,8 @@ commands.vampirism.level.faction_not_found=Did not find faction %s
 commands.vampirism.failed_to_execute=Failed to execute command. Internal error.
 
 #ENCHANMENTS
-enchantment.vampirism.arrowFrugality=Arrow Frugality
-enchantment.vampirism.vampireSlayer=Vampire Slayer
+enchantment.vampirism.arrow_frugality=Arrow Frugality
+enchantment.vampirism.vampire_slayer=Vampire Slayer
 
 #ETC
 text.vampirism.vampire=Vampire
@@ -310,7 +310,7 @@ text.vampirism.basic_hunter.i_will_train_you=Alright, I will train you
 text.vampirism.i_am_busy_right_now=I'm busy right now
 text.vampirism.crossbow.not_loaded=Not loaded
 text.vampirism.crossbow.loaded_arrow_count=Loaded %s arrows
-itemGroup.vampirism=Vampirism
+item_group.vampirism=Vampirism
 death.attack.sun=%1$s did not like the sun
 death.attack.garlic=%1$s was poisoned by garlic
 death.attack.vampire_on_fire=%1$s burned to ashes
@@ -333,7 +333,7 @@ text.vampirism.ritual_no_vampire=You need to be a vampire for this ritual
 text.vampirism.cant_fly_day=You cannot fly at daytime
 text.vampirism.cant_fly_end=You are not able to transfrom into a bat in the End
 text.vampirism.no_more_minions=You are not able to control any more minions
-text.vampirism.coffin.noSleep=You can only sleep at day
+text.vampirism.coffin.no_sleep=You can only sleep at day
 text.vampirism.coffin.occupied=This coffin is occupied
 text.vampirism.coffin.stopsleeping=Leave coffin
 text.vampirism.coffin.cant_use=You can't sleep in a coffin
@@ -372,9 +372,9 @@ text.vampirism.no_dracula_to_call=Dracula is dead and cannot be called
 text.vampirism.outdated=You are running Vampirism %s, the latest version is %s.
 text.vampirism.update_message=["Click for... [",{"text":"Download","color":"green","hoverEvent":{"action":"show_text","value":{"text":"Click this to go to the download page","color":"green"}},"clickEvent":{"action":"open_url","value":"@download@"}},"] [",{"text":"Website","color":"green","hoverEvent":{"action":"show_text","value":{"text":"Click this to go to the mod's forum page","color":"green"}},"clickEvent":{"action":"open_url","value":"@forum@"}},"] [",{"text":"Changelog","color":"green","hoverEvent":{"action":"show_text","value":{"text":"Click this see the version's Changelog","color":"green"}},"clickEvent":{"action":"run_command","value":"/vampirism changelog"}},"]"]
 text.vampirism.action.cooldown_not_over=Cooldown is not over yet
-text.vampirism.itemTier.normal=Normal
-text.vampirism.itemTier.enhanced=Enhanced
-text.vampirism.itemTier.ultimate=Special
+text.vampirism.item_tier.normal=Normal
+text.vampirism.item_tier.enhanced=Enhanced
+text.vampirism.item_tier.ultimate=Special
 text.vampirism.poisonous_to_vampires=Poisonous to vampires
 text.vampirism.deals_more_damage_to=Deals %s percent more damage against
 text.vampirism.liquid_container=Any liquid container
