--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -86,6 +86,9 @@ text.vampirism.skill.holy_water_enhanced=Enhanced Holy Water
 text.vampirism.skill.holy_water_enhanced.desc=Create enhanced Holy Water instead of normal one.
 text.vampirism.skill.garlic_beacon_improved=Improved diffuser
 text.vampirism.skill.garlic_beacon_improved.desc=Learn how to craft a garlic diffuser with a higher range
+text.vampirism.command.available_subcommands=Available Subcommands:
+text.vampirism.command.subcommand_help=Use '/%s help <subcommand>' to get more information
+text.vampirism.command.usage=/%s <subcommand> <params> | Use /%s help to get all available subcommands
 
 #HUNTER ACTIONS
 action.vampirism.hunter.disguise=Disguise
