Added description to castle block
(cherry picked from commit 6f2f8fb)

--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -135,6 +135,8 @@ tile.vampirism.castle_block.normal_brick=Stone Brick
 tile.vampirism.castle_block.dark_brick=Dark Stone Brick
 tile.vampirism.castle_block.purple_brick=Purple Stone Brick
 tile.vampirism.castle_block.bloody_dark_brick=Bloody Dark Stone Brick
+tile.vampirism.castle_block.no_spawn=No entity can spawn on this
+tile.vampirism.castle_block.vampire_spawn=Only vampires can spawn on this
 tile.vampirism.cursed_earth.name=Cursed Earth
 tile.vampirism.altar_infusion.name=Altar of Infusion
 tile.vampirism.altar_pillar.name=Altar Pillar
