Added two more translation string for 1.10/1.11 compat
(cherry picked from commit 79c78ea)

--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -109,9 +109,11 @@ entity.vampirism.advanced_vampire.name=Advanced Vampire
 entity.vampirism.advanced_hunter.name=Advanced Hunter
 entity.vampirism.hunter_villager.name=Angry Villager
 entity.vampirism.vampire_hunter.name=Vampire Hunter
+entity.vampirism.vampireHunter.name=Vampire Hunter
 entity.vampirism.vampire.name=Vampire
 entity.vampirism.ghost.name=Ghost
 entity.vampirism.vampire_baron.name=Vampire Baron
+entity.vampirism.vampireBaron.name=Vampire Baron
 entity.vampirism.vampire_minion_r.name=Vampire Minion
 entity.vampirism.vampire_minion_s.name=Vampire Minion
 entity.vampirism.blinding_bat.name=Bat
