Addresses issue 164. Now for real
(cherry picked from commit 7ee2110)

(cherry picked from commit efaab4e)

--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -155,6 +155,8 @@ tile.vampirism.weapon_table.cannot_use=You have not learned how to use this
 tile.vampirism.blood_potion_table.name=Blood Potion Table
 tile.vampirism.blood_potion_table.cannot_use=You have not learned how to use this
 tile.vampirism.sunscreen_beacon.name=Sunscreen Beacon
+tile.vampirism.sunscreen_beacon.tooltip1=Creative only.
+tile.vampirism.sunscreen_beacon.tooltip2=Gives sunscreen to vampire players in a %s blocks radius, from bedrock to sky.
 tile.vampirism.alchemical_fire.name=Alchemical Fire
 tile.vampirism.alchemical_cauldron.other=This cauldron belongs to %s. You should not use it.
 tile.vampirism.alchemical_cauldron.name=Alchemical Cauldron
