Fixed Config GUI Strings

--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -425,12 +425,31 @@ minioncommand.vampirism.defendarea=Defend area
 #CONFIG
 category.vampirism.balance=Balance settings
 category.vampirism.balance.tooltip=Change almost any balance relevant property
-category.vampirism.balance_level=Levelup balance settings
-category.vampirism.balance_player_mod=Vampire player modifier settings
-category.vampirism.balance_player_skills=Vampire player skills settings
-category.vampirism.balance_mob_prop=Vampirism mob properties
+category.vampirism.balance_general=General
+category.vampirism.balance_general.tooltip=General Configuration Options
+category.vampirism.balance_leveling=Levelup balance settings
+category.vampirism.balance_vampire_player=Vampire Player General
+category.vampirism.balance_vampire_player.tooltip=Configure Vampire Player modifiers
+category.vampirism.balance_vampire_player_skills=Vampire Player Skills
+category.vampirism.balance_vampire_player_skills.tooltip=Configure Skills
+category.vampirism.balance_vampire_player_actions=Vampire Player Actions
+category.vampirism.balance_vampire_player_actions.tooltip=Configure Actions
+category.vampirism.balance_hunter_player=Hunter Player General
+category.vampirism.balance_hunter_player.tooltip=Configure Hunter Player modifiers
+category.vampirism.balance_hunter_player_skills=Hunter Player Skills
+category.vampirism.balance_hunter_player_skills.tooltip=Configure Skills
+category.vampirism.balance_hunter_player_actions=Hunter Player Actions
+category.vampirism.balance_hunter_player_actions.tooltip=Configure Actions
+category.vampirism.balance_mob_prop=Vampirism Mob Properties
 category.vampirism.balance_mob_prop.tooltip=Change properties of the mobs added by Vampirism
-category.vampirism.balance_vv_prop=Village Vampire properties
-category.vampirism.balance_vv_prop.tooltip=Change the way hunters in villages act and adjust other village related stuff
+category.vampirism.balance_village=Village Vampire properties
+category.vampirism.balance_village.tooltip=Change the way hunters in villages act and adjust other village related stuff
+category.vampirism.balance_leveling=Leveling Config
+category.vampirism.balance_leveling.tooltip=Configure Player Leveling
+category.vampirism.disable=Disable Features
 category.vampirism.disable.tooltip=Disable parts of the mod (Not recommend)
+category.vampirism.village=Village Configuration
+category.vampirism.village.tooltip=Configure Vampirism's village modifications
+category.vampirism.gui=GUI Configuration
+category.vampirism.gui.tooltip=Configure display
 
