Fixed 192 by making generation dimensions configurable
(cherry picked from commit 49035cc)

--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -452,4 +452,5 @@ category.vampirism.village=Village Configuration
 category.vampirism.village.tooltip=Configure Vampirism's village modifications
 category.vampirism.gui=GUI Configuration
 category.vampirism.gui.tooltip=Configure display
+category.vampirism.worldgen=World Generation
 
