Added a few more eye types and allows the player to have glowing eyes. Closes #72

--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -309,6 +309,8 @@ command.vampirism.base.reset_balance.not_found=Did not find %s balance category.
 command.vampirism.base.level.cant_leave=Cannot leave faction %s
 command.vampirism.base.eye.types=<id> has to be a valid number between 0 and %s
 command.vampirism.base.eye.success=Successfully changed eye type to %s
+command.vampirism.base.glowing_eyes.enabled=Successfully enabled glowing eyes
+command.vampirism.base.glowing_eyes.disabled=Successfully disabled glowing eyes
 command.vampirism.base.fang.types=<id> has to be a valid number between 0 and %s
 command.vampirism.base.fang.success=Successfully changed fang type to %s
 command.vampirism.base.vampire_biome.disabled=The Vampire Biome is disabled in the config file
