--- a/src/main/resources/assets/vampirism/lang/en_US.lang
+++ b/src/main/resources/assets/vampirism/lang/en_US.lang
@@ -142,9 +142,16 @@ tile.vampirism.castle_block.dark_stone=Dark Stone
 tile.vampirism.castle_block.normal_brick=Stone Brick
 tile.vampirism.castle_block.dark_brick=Dark Stone Brick
 tile.vampirism.castle_block.purple_brick=Purple Stone Brick
-tile.vampirism.castle_block.bloody_dark_brick=Bloody Dark Stone Brick
+tile.vampirism.castle_block.dark_brick_bloody=Bloody Dark Stone Brick
 tile.vampirism.castle_block.no_spawn=No entity can spawn on this
 tile.vampirism.castle_block.vampire_spawn=Only vampires can spawn on this
+tile.vampirism.castle_stairs_dark.name=Dark Brick Stairs
+tile.vampirism.castle_stairs_purple.name=Purple Brick Stairs
+tile.vampirism.castle_stairs_dark_stone.name=Dark Stone Stairs
+tile.vampirism.castle_slab.dark_brick.name=Dark Brick Slab
+tile.vampirism.castle_slab.purple_brick.name=Purple Brick Slab
+tile.vampirism.castle_slab.dark_stone.name=Dark Stone Slab
+
 tile.vampirism.cursed_earth.name=Cursed Earth
 tile.vampirism.altar_infusion.name=Altar of Infusion
 tile.vampirism.altar_pillar.name=Altar Pillar
